# ascii-art-2021

./: .gitignore  README.md  akey.txt  akey2.txt  akey_invert.txt  app.py  ascii_img.txt  community-version.py  community_version.py  community_version_main.py  gui.py  image_handler.py  logger_config.py  pyproject.toml  requirements.txt  web_config.py
GUI/: community-version.py
example/: Add Two Binary Numbers using User-Defined Code  make_art.py  make_art_python2.py
keys/: akey_dboikliev.txt  akey_long.txt
modules/: command_line_args.py  file_manager.py  image_handler.py
static/css/: style.css
templates/: index.html  ztm-logo.html
text-ascii-art/: animated.py  text-ascii-art.py
webapp/: temp.txt
yashraj2003e/: community-version.py
