[tool.poetry]
name = "ascii-art"
version = "0.1.0"
description = "Presents images using ASCII characters."
authors = ["Zero to Mastery <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
